--- a/verificacao-links-https/package.json
+++ b/verificacao-links-https/package.json
@@ -17,7 +17,7 @@
   "author": "João Pedro Brandão",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alura-cursos/2708-node-lib-md/issues"
+    "url": "https://github.com/JP-MBrandao/"
   },
   "homepage": "https://github.com/JP-MBrandao/",
   "dependencies": {
