--- a/verificacao-links-https/package.json
+++ b/verificacao-links-https/package.json
@@ -14,10 +14,11 @@
     "url": "git+https://github.com/alura-cursos/2708-node-lib-md.git"
   },
   "keywords": ["markdown","URL"],
-  "author": "João Pedro Brandão",
+  "author": "João Pedro Brandão <jpedrodemedeiros@yahoo.com.br> (https://github.com/JP-MBrandao/)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JP-MBrandao/"
+    "url": "https://github.com/JP-MBrandao/Projetos/tree/main/verificacao-links-https",
+    "email": "jpedrodemedeiros@yahoo.com.br"
   },
   "homepage": "https://github.com/JP-MBrandao/",
   "dependencies": {
